deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: app
spec:
  selector:
    app: echo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
