deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: echo.local.com
      http:
        paths:
          - path: /customers
            pathType: Prefix
            backend:
              service:
                name: echo
                port:
                  number: 8080
